Fix background of menu on mobile screen

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -66,6 +66,7 @@ div.textContainer {
   bottom: 0;
   position: fixed;
   top: 120px;
+  z-index: -1;
 }
 
 div.textDisplay {
